# ai-workflows

./: .coderabbit.yaml  .gitignore  .lychee.toml  .markdownlint-cli2.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: INSTALL.md  plugin.json
.cursor-plugin/: INSTALL.md  plugin.json
.github/scripts/: validate-structure.sh  validate-versions.sh
.github/workflows/: docs.yml  e2e.yaml  lint.yaml  tag-versions.yaml  test.yaml
_shared/: provenance-schema.md  review-protocol.md
_shared/recipes/: capture-provenance-event.md  record-manual-edit.md  render-provenance-footer.md  self-review-gate.md  simplicity-ladder.md  validation-gate.md
_shared/scripts/: provenance.py  test_provenance.py
agents/: workflow-phase.md
ai-ready/: README.md  SKILL.md  guidelines.md
ai-ready/commands/: update.md
ai-ready/skills/: frontend-scan.md  update.md
bugfix/: README.md  SKILL.md  guidelines.md
bugfix/commands/: assess.md  (+10 more)
code-review/: README.md  SKILL.md  guidelines.md
cve-fix/: README.md  SKILL.md  guidelines.md
design/: README.md  SKILL.md  guidelines.md
docs/: index.md  prd-guide.md
docs-writer/: README.md  SKILL.md  guidelines.md
e2e/: README.md  SKILL.md  guidelines.md
hack/: validate-structure.sh
implement/: README.md  SKILL.md  guidelines.md
kcs/: README.md  SKILL.md  guidelines.md
prd/: GUIDE.md  README.md  SKILL.md  guidelines.md
sizing/: SKILL.md  guidelines.md
skill-reviewer/: README.md  SKILL.md  guidelines.md
triage/: README.md  SKILL.md  guidelines.md
(+184 files in other folders)
