# Edited by Claude Code
[project]
name = "ai-workflows"
version = "0.1.0"
description = "Reusable AI coding workflows for Cursor, Claude Code, and other environments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"

[project.optional-dependencies]
docs = [
    "ghp-import",
    "zensical",
]

